--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Guiminamflix</title>
+    <title>pirataflix</title>
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <header>PIRATAFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+            <h1>FILMES COMPLETOS, DUBLADOS E ATUALIZADOS 2024</h1>
+            <p>#filme-gratis</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+            <iframe width="560" height="315" src="https://http2.mlstatic.com/D_NQ_NP_955503-MLB41600814046_042020-O.webp"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -30,20 +30,21 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://youtu.be/jBkR-1RRSUs?feature=shared">
+                <img src="" />
+                <img src="" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://youtu.be/cU7Ard5bqdg?feature=shared">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZBj9vsZ2CQV4XhBZuZgaR8osG9OkXTo6GnQ&s" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://youtu.be/vRjJTYXEH3Q?feature=shared">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7knFPSHXjsazLLprMBXKVf14Ab95FaTMqlw&s" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://youtu.be/CP96i_pu9Is?feature=shared">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbzoB6qqjizrPd1HerwR5Zk1wNiuOLv3Z0Vw&s" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://youtu.be/dkY2C3JbHwA?feature=shared">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM9WAqT2y9PsTjaWUSFQcP77p_0FERp_fe1A&s" />
             </a>
         </div>
     </section>
